deploy: 6cf36ff2210c20928f254b2cf3247a3c5dcba05d

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
       
         <li class="nav-item">
           <a href="/collaborations/" class="nav-link">
-            <i class="fa-fw fas fa-tags"></i>
+            <i class="fa-fw fas fa-university"></i>
             
 
             <span>COLLABORATIONS</span>
