--- a/404.html
+++ b/404.html
@@ -350,7 +350,7 @@
       
         <li class="nav-item">
           <a href="/collaborations/" class="nav-link">
-            <i class="fa-fw fas fa-tags"></i>
+            <i class="fa-fw fas fa-university"></i>
             
 
             <span>COLLABORATIONS</span>
