add functions to show website visiting information

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home
 
     <h2>Project description:</h2>
     <p>This project aims to reduce health disparities in heart transplantation among underrepresented minority populations, particularly Blacks, by investigating the role of donor-recipient blood type composition mismatch, specifically the underrepresentation of blood type B donors. We will use advanced AI/ML methodologies to analyze the potential benefits of increasing blood type B donors and identify trends contributing to these disparities.</p>
-    
+
     <p>Our aims are:</p>
     <ol>
         <li>Develop AI/ML algorithms to estimate the potential benefits of increasing blood type B donors for heart transplantation in Black patients, providing evidence for education and community engagement initiatives.</li>
@@ -20,3 +20,7 @@ layout: home
 </body>
 </html>
 
+<span id="busuanzi_container_site_pv">
+	Total website visits: <span id="busuanzi_value_site_pv"></span>
+    Total number of visitors: <span id="busuanzi_value_site_uv"></span>
+</span>
