--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
     <h2>Project description:</h2>
     <p>This project aims to reduce health disparities in heart transplantation among underrepresented minority populations, particularly Blacks, by investigating the role of donor-recipient blood type composition mismatch, specifically the underrepresentation of blood type B donors. We will use advanced AI/ML methodologies to analyze the potential benefits of increasing blood type B donors and identify trends contributing to these disparities.</p>
-    
+
     <p>Our aims are:</p>
     <ol>
         <li>Develop AI/ML algorithms to estimate the potential benefits of increasing blood type B donors for heart transplantation in Black patients, providing evidence for education and community engagement initiatives.</li>
@@ -517,7 +517,10 @@
 </body>
 </html>
 
-
+<span id="busuanzi_container_site_pv">
+	Total website visits: <span id="busuanzi_value_site_pv"></span>
+    Total number of visitors: <span id="busuanzi_value_site_uv"></span>
+</span>
             
           </main>
 
@@ -654,6 +657,7 @@
   </p>
 </footer>
 
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
           </div>
         </div>
 
