--- a/index.html
+++ b/index.html
@@ -516,11 +516,6 @@
     <p>By focusing on donor-recipient blood type composition mismatch and employing AI/ML models, this project aims to improve fairness in heart transplant procedures and overall cardiometabolic health for underrepresented minority populations. The project's success will provide insights into the role of donor-recipient blood type composition mismatch in heart transplantation disparities and inform the development of targeted interventions and policies.</p>
 </body>
 </html>
-
-<span id="busuanzi_container_site_pv">
-	Total website visits: <span id="busuanzi_value_site_pv"></span>
-    Total number of visitors: <span id="busuanzi_value_site_uv"></span>
-</span>
             
           </main>
 
@@ -631,7 +626,18 @@
           <div id="tail-wrapper" class="col-12 col-lg-11 col-xl-9 px-md-4">
             
 
-            <!-- The Footer -->
+            <!-- Site Statistics Section -->
+<div class="site-statistics">
+  <h3>Site Statistics</h3>
+  <p>
+    Total website visits: <span id="busuanzi_value_site_pv"></span>
+  </p>
+  <p>
+    Total number of visitors: <span id="busuanzi_value_site_uv"></span>
+  </p>
+</div>
+
+<!-- The Footer -->
 
 <footer
   aria-label="Site Info"
