--- a/index.html
+++ b/index.html
@@ -19,3 +19,15 @@ layout: home
     <p>By focusing on donor-recipient blood type composition mismatch and employing AI/ML models, this project aims to improve fairness in heart transplant procedures and overall cardiometabolic health for underrepresented minority populations. The project's success will provide insights into the role of donor-recipient blood type composition mismatch in heart transplantation disparities and inform the development of targeted interventions and policies.</p>
 </body>
 </html>
+
+<!-- Site Statistics Section -->
+<div class="site-statistics">
+    <h2>Site Statistics</h2>
+    <br> <!-- add more space -->
+    <p>
+      Total website visits: <span id="busuanzi_value_site_pv"></span>
+    </p>
+    <p>
+      Total number of visitors: <span id="busuanzi_value_site_uv"></span>
+    </p>
+  </div>
