--- a/index.html
+++ b/index.html
@@ -516,6 +516,19 @@
     <p>By focusing on donor-recipient blood type composition mismatch and employing AI/ML models, this project aims to improve fairness in heart transplant procedures and overall cardiometabolic health for underrepresented minority populations. The project's success will provide insights into the role of donor-recipient blood type composition mismatch in heart transplantation disparities and inform the development of targeted interventions and policies.</p>
 </body>
 </html>
+
+<!-- Site Statistics Section -->
+<div class="site-statistics">
+    <h2>Site Statistics</h2>
+    <br> <!-- add more space -->
+    <p>
+      Total website visits: <span id="busuanzi_value_site_pv"></span>
+    </p>
+    <p>
+      Total number of visitors: <span id="busuanzi_value_site_uv"></span>
+    </p>
+  </div>
+
             
           </main>
 
@@ -626,18 +639,7 @@
           <div id="tail-wrapper" class="col-12 col-lg-11 col-xl-9 px-md-4">
             
 
-            <!-- Site Statistics Section -->
-<div class="site-statistics">
-  <h3>Site Statistics</h3>
-  <p>
-    Total website visits: <span id="busuanzi_value_site_pv"></span>
-  </p>
-  <p>
-    Total number of visitors: <span id="busuanzi_value_site_uv"></span>
-  </p>
-</div>
-
-<!-- The Footer -->
+            <!-- The Footer -->
 
 <footer
   aria-label="Site Info"
