--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: home
     <h2>Project</h2>
     <p>AIM-AHEAD: <a href="https://www.aim-ahead.net/">https://www.aim-ahead.net/</a></p>
 
-    <h2>Project description:</h2>
+    <h2>Project description</h2>
     <p>This project aims to reduce health disparities in heart transplantation among underrepresented minority populations, particularly Blacks, by investigating the role of donor-recipient blood type composition mismatch, specifically the underrepresentation of blood type B donors. We will use advanced AI/ML methodologies to analyze the potential benefits of increasing blood type B donors and identify trends contributing to these disparities.</p>
 
     <p>Our aims are:</p>
@@ -23,7 +23,6 @@ layout: home
 <!-- Site Statistics Section -->
 <div class="site-statistics">
     <h2>Site Statistics</h2>
-    <br> <!-- add more space -->
     <p>
       Total website visits: <span id="busuanzi_value_site_pv"></span>
     </p>
