deploy: 68dd32ef4b206eb31ceda2a854a339f7fc92fcf6

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <meta property="og:url" content="https://aimaheadheart.github.io/" />
 <meta property="og:site_name" content="HEART" />
 <meta property="og:type" content="website" />
+<link rel="next" href="https://aimaheadheart.github.io/page2/" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="HEART" />
 <meta name="twitter:site" content="@twitter_username" />
