deploy: b18920cc61ba03b45b15e7e34c712174bd726e70

--- a/page2/index.html
+++ b/page2/index.html
@@ -44,6 +44,7 @@
 <meta property="og:site_name" content="HEART" />
 <meta property="og:type" content="website" />
 <link rel="prev" href="https://aimaheadheart.github.io/" />
+<link rel="next" href="https://aimaheadheart.github.io/page3/" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="HEART" />
 <meta name="twitter:site" content="@twitter_username" />
