--- a/page3/index.html
+++ b/page3/index.html
@@ -44,6 +44,7 @@
 <meta property="og:site_name" content="HEART" />
 <meta property="og:type" content="website" />
 <link rel="prev" href="https://aimaheadheart.github.io/page2/" />
+<link rel="next" href="https://aimaheadheart.github.io/page4/" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="HEART" />
 <meta name="twitter:site" content="@twitter_username" />
