deploy: 0b15575dbffbb5bd307769de9bad7a54d36958ab

--- a/page2/index.html
+++ b/page2/index.html
@@ -282,7 +282,7 @@
     <h1 class="site-title">
       <a href="/">HEART</a>
     </h1>
-    <p class="site-subtitle fst-italic mb-0">Heart Equity and Access - Responsible Tranplantation</p>
+    <p class="site-subtitle fst-italic mb-0">Heart Equity and Access - Responsible Transplantation</p>
   </header>
   <!-- .profile-wrapper -->
 
