update the project description

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@ layout: home
     <p>AIM-AHEAD: <a href="https://www.aim-ahead.net/">https://www.aim-ahead.net/</a></p>
 
     <h2>Project description</h2>
-    <p>This project aims to reduce health disparities in heart transplantation among underrepresented minority populations, particularly Blacks, by investigating the role of donor-recipient blood type composition mismatch, specifically the underrepresentation of blood type B donors. We will use advanced AI/ML methodologies to analyze the potential benefits of increasing blood type B donors and identify trends contributing to these disparities.</p>
+    <p>This project focuses on improving outcomes in heart transplantation by examining donor-recipient blood type composition mismatch, with particular attention to the availability of blood type B donors. Leveraging advanced artificial intelligence (AI) and machine learning (ML) methodologies, we aim to quantify the potential benefits of increasing the supply of blood type B donors and to provide data-driven insights that can inform public education, community engagement, and healthcare planning.</p>
 
     <p>Our aims are:</p>
     <ol>
-        <li>Develop AI/ML algorithms to estimate the potential benefits of increasing blood type B donors for heart transplantation in Black patients, providing evidence for education and community engagement initiatives.</li>
+        <li>Develop AI/ML algorithms to estimate the potential benefits of increasing blood type B donors for heart transplantation, providing evidence for education and community engagement initiatives.</li>
         <li>Collaborate with Minority Serving Institutions (MSIs) to study donor-recipient blood type composition mismatch in the context of Social Determinants of Health (SDOH) and engage communities to promote our AI/ML findings, encouraging more blood type B donors.</li>
     </ol>
 
-    <p>By focusing on donor-recipient blood type composition mismatch and employing AI/ML models, this project aims to improve fairness in heart transplant procedures and overall cardiometabolic health for underrepresented minority populations. The project's success will provide insights into the role of donor-recipient blood type composition mismatch in heart transplantation disparities and inform the development of targeted interventions and policies.</p>
+    <p>By focusing on donor-recipient blood type composition mismatch and employing AI/ML models, this project aims to improve fairness in heart transplant procedures and overall cardiometabolic health for populations. The project's success will provide insights into the role of donor-recipient blood type composition mismatch in heart transplantation disparities and inform the development of targeted interventions and policies.</p>
 </body>
 </html>
 
