--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@ layout: home
 
     <p>Our aims are:</p>
     <ol>
-        <li>Develop AI/ML algorithms to estimate the potential benefits of increasing blood type B donors for heart transplantation, providing evidence for education and community engagement initiatives.</li>
-        <li>Collaborate with communities and institutions to study donor-recipient blood type composition mismatch in the context of Social Determinants of Health (SDOH) and engage communities to promote our AI/ML findings, encouraging more blood type B donors.</li>
+        <li>Develop artificial intelligence (AI) and machine learning (ML) algorithms to quantify the benefits of increasing donor supply.</li>
+        <li>Integrate demographic characteristics and Social Determinants of Health (SDOH) into modeling frameworks.</li>
+        <li>Collaborate with healthcare providers and community partners to translate analytical insights into actionable practice.</li>
     </ol>
 
     <p>By focusing on donor-recipient blood type composition mismatch and employing AI/ML models, this project aims to improve fairness in heart transplant procedures and overall cardiometabolic health for populations. The project's success will provide insights into the role of donor-recipient blood type composition mismatch in heart transplantation disparities and inform the development of targeted interventions and policies.</p>
